--- a/CSS/style.css
+++ b/CSS/style.css
@@ -284,18 +284,17 @@ section.landing .container {
     align-items: center;
     padding-bottom: 120px;
 }
+@media (max-width: 991px) {
+    section.landing .container {
+        flex-wrap: wrap;
+    }
+}
 section.landing .img img {
     width: 550px;
     max-width: 100%;
     position: relative;
     animation: up-and-down 5s linear infinite;
     -webkit-animation: up-and-down 5s linear infinite;
-}
-@media (max-width: 991px) {
-
-    section.landing .img {
-        display: none;
-    }
 }
 .landing .text {
     flex: 1;
